# tabulens

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: example_pipeline.py  profile_demo.py
notebooks/: tabulens_tutorial.ipynb
tabulens/: __init__.py  cleaning.py  filtering.py  insights.py  optimization.py  profiling.py  rules.py  validation.py
tabulens_davidvarh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cleaning.py  test_filtering.py  test_insights.py  test_optimization.py  test_profiling.py  test_rules.py  test_validation.py
