[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tabulens"
version = "0.1.0"
description = "A Python library for profiling, validating, cleaning, filtering, optimizing, and extracting insights from pandas DataFrames."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "David" }
]
dependencies = [
  "pandas",
  "numpy"
]

[tool.setuptools.packages.find]
include = ["tabulens*"]